--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,7 +38,9 @@
     </header>
     <main>
         <div class="contact-form">
+          <div class="titulo">
             <h1>Contactate con nosotros</h1>
+          </div>            
             <form action="#" method="post">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required> 
