--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </section>
         <div class="wapp">
-            <img src="./img/logo-fisio.jpg" alt="wapp">
+            <a href="https://api.whatsapp.com/send?phone=+59899858286&text=Realizando las pruebas de consulta!" target="_blank"><img src="./img/img-wapp.png" alt="wapp"></a>            
         </div>
     </main>
     <footer>
