--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -25,10 +25,10 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item"><a class="nav-link color-a" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link color-a" href="../pages/quienes-somos.html">Quienes somos</a></li>
-                    <li class="nav-item"><a class="nav-link color-a" href="../pages/servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link color-a" href="../pages/agentes-fisicos.html">Agentes fisicos</a></li>
-                    <li class="nav-item"><a class="nav-link color-a" href="../pages/contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link color-a" href="./quienes-somos.html">Quienes somos</a></li>
+                    <li class="nav-item"><a class="nav-link color-a" href="./servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link color-a" href="./agentes-fisicos.html">Agentes fisicos</a></li>
+                    <li class="nav-item"><a class="nav-link color-a" href="./contacto.html">Contacto</a></li>
                   </ul>
                 </div>
               </div>
