--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-white bg-white fixed-top navbar-expand-lg nav-border">
             <div class="container-fluid">
-              <a href="#"><img src="../img/logo-fisio.jpg" alt="logo-fisio" class="logo"></a>
+              <a href="../index.html"><img src="../img/logo-fisio.jpg" alt="logo-fisio" class="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon  icono-menu"></span>
               </button>
