--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -41,45 +41,45 @@
         </div>
         <div class="servicios-container">
             <div class="servicio">
-                <img src="../img/ServicioFisio.jpg" alt="">
+                <img src="../img/fisioterapia-deportiva.jpg" alt="fisioterapia deportiva">
                 <div class="descripcion">
-                    <h3>Nombre del servicio</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Fisioterapia Deportiva</h3>
+                    <p>La fisioterapia deportiva es una especialidad dentro de la fisioterapia que se enfoca en la prevención, diagnóstico, tratamiento y rehabilitación de lesiones relacionadas con la práctica de deportes y ejercicio físico. Los fisioterapeutas deportivos trabajan con atletas de todos los niveles, desde aficionados hasta profesionales, para ayudarlos a recuperarse de lesiones y mejorar su rendimiento.</p>
                 </div>
             </div>
             <div class="servicio">               
-                <img src="../img/ServicioFisio.jpg" alt="Servicio 2">
+                <img src="../img/FisioEspalda2.jpg" alt="Kinesiología Unificada">
                 <div class="descripcion">
-                    <h3>Nombre del Servicio 2</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Kinesiología Unificada</h3>
+                    <p>La Kinesiología Unificada es un enfoque integral de la salud que combina principios y técnicas de diversas ramas de la kinesiología para evaluar y tratar desequilibrios físicos, emocionales y energéticos en el cuerpo. Este método holístico tiene como objetivo mejorar el bienestar general y la calidad de vida de las personas a través de una evaluación exhaustiva y tratamientos personalizados.</p>
                 </div>
             </div>    
             <div class="servicio">
-                <img src="../img/ServicioFisio.jpg" alt="">
+                <img src="../img/masajes-terapeuticos.jpg" alt="Masajes Terapéuticos">
                 <div class="descripcion">
-                    <h3>Nombre del servicio</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Masajes Terapéuticos</h3>
+                    <p>Los masajes terapéuticos son una técnica de manipulación de los tejidos blandos del cuerpo, como los músculos, tendones y ligamentos, con el objetivo de aliviar el dolor, reducir el estrés, mejorar la circulación y promover la relajación general. Esta forma de terapia se adapta a las necesidades específicas de cada persona, abordando tanto problemas físicos como emocionales.</p>
                 </div>
             </div>
             <div class="servicio">
-                <img src="../img/ServicioFisio.jpg" alt="Servicio 2">
+                <img src="../img/tratamiento-de-electroterapia.jpg" alt="Electroterapia y Ultrasonidos">
                 <div class="descripcion">
-                    <h3>Nombre del Servicio 2</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Electroterapia y Ultrasonidos</h3>
+                    <p>La electroterapia y los ultrasonidos son técnicas terapéuticas utilizadas en la fisioterapia para tratar diversas condiciones musculoesqueléticas. Ambas técnicas ayudan a aliviar el dolor, reducir la inflamación, acelerar la curación de los tejidos y mejorar la función muscular y articular.</p>
                 </div>
             </div>           
             <div class="servicio">
-                <img src="../img/ServicioFisio.jpg" alt="">
+                <img src="../img/FisioVenda2.jpg" alt="">
                 <div class="descripcion">
-                    <h3>Nombre del servicio</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Vendaje Neuromuscular</h3>
+                    <p>El vendaje neuromuscular, también conocido como kinesiotaping, es una técnica terapéutica que utiliza cintas elásticas adhesivas diseñadas para facilitar el proceso de curación natural del cuerpo. Esta técnica ofrece soporte y estabilidad a los músculos y articulaciones sin restringir el rango de movimiento, a la vez que proporciona una manipulación suave de la piel para prolongar los beneficios de otros tratamientos fisioterapéuticos.</p>
                 </div>
             </div>
             <div class="servicio">
                 <img src="../img/ServicioFisio.jpg" alt="Servicio 2">
                 <div class="descripcion">
-                    <h3>Nombre del Servicio 2</h3>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <h3>Fisioterapia</h3>
+                    <p>La fisioterapia es una disciplina de la salud que se enfoca en la evaluación, diagnóstico, tratamiento y prevención de problemas y trastornos del movimiento y la función física. Utilizando una combinación de técnicas manuales, ejercicios terapéuticos, electroterapia y educación, los fisioterapeutas trabajan para mejorar la calidad de vida de las personas de todas las edades.</p>
                 </div>
             </div>
         </div>
