--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <title>Proyecto Final</title>
 </head>
@@ -59,6 +61,9 @@
 
                 <input type="submit" value="Enviar">
             </form>
+        </div>
+        <div class="wapp">
+          <a href="https://api.whatsapp.com/send?phone=+59899858286&text=Realizando las pruebas de consulta!" target="_blank"><img src="../img/img-wapp.png" alt="wapp"></a>            
         </div>
     </main>
     <footer>
