--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -41,45 +41,45 @@
         </div>
         <div class="quienes-somos-pres">
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil5.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Luis Suarez</h3>
+                    <p>Profesional de masaje muscular en una clínica de fisioterapia, especializado en técnicas de alivio del dolor, mejora de la movilidad y recuperación muscular. Experiencia en tratamientos personalizados para promover la salud y el bienestar de los pacientes.</p>
                 </div>
             </div>   
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil1.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Leticia Shneider</h3>
+                    <p>"Especialista en fisioterapia deportiva, enfocado en la prevención, tratamiento y rehabilitación de lesiones deportivas. Trabajo con atletas para mejorar el rendimiento, acelerar la recuperación y prevenir futuras lesiones mediante técnicas avanzadas y programas personalizados.</p>
                 </div>
             </div>     
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil6.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Anastasia Garcia</h3>
+                    <p>Experto en Kinesiología Unificada, proporcionando tratamientos integrales que combinan técnicas de fisioterapia, quiropráctica y masaje terapéutico. Enfocado en la recuperación funcional, el alivio del dolor y la mejora del rendimiento físico mediante enfoques personalizados y holísticos.</p>
                 </div>
             </div>     
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil2.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Angelica Lopez</h3>
+                    <p>Especialista en Vendaje Neuromuscular, aplicando técnicas avanzadas para el alivio del dolor, la reducción de la inflamación y el soporte de la función muscular y articular. Utilizo vendajes adhesivos elásticos para promover la recuperación, mejorar la circulación y prevenir lesiones en deportistas y pacientes en rehabilitación.</p>
                 </div>
             </div>     
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil3.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Pablo Proteo</h3>
+                    <p>Especialista en Electroterapia y Ultrasonidos, utilizando tecnologías avanzadas para el tratamiento del dolor, la inflamación y la promoción de la cicatrización de tejidos. Proporciono terapias no invasivas y personalizadas que aceleran la recuperación muscular y articular en pacientes con diversas condiciones.</p>
                 </div>
             </div>     
             <div class="card">
-                <img src="../img/Integrante1.jpg" alt="">
+                <img src="../img/Perfil4.jpg" alt="">
                 <div class="info">
-                    <h3>Nombre del integrante</h3>
-                    <p>Breve descripcion del integrante</p>
+                    <h3>Alan Furtado</h3>
+                    <p>Fisioterapeuta profesional, especializado en la evaluación, diagnóstico y tratamiento de afecciones musculoesqueléticas. Utilizo técnicas avanzadas y programas personalizados para mejorar la movilidad, aliviar el dolor y promover la recuperación funcional de los pacientes.</p>
                 </div>
             </div>
         </div>
