--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
     <title>Proyecto Final</title>
 </head>
 <body>
@@ -90,7 +94,7 @@
                 <div class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.7084024284545!2d-56.16447192419404!3d-34.9137665739388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81a1abb2c099%3A0x78b4ffaecbbb41e4!2s21%20de%20Setiembre%202480%2C%2011300%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1719797564478!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="detalles">
+                <div data-aos="fade-left" class="detalles">
                     <p>Dirección: 21 de Septiembre 2480, Montevideo</p>
                     <p>Teléfono: +123456789</p>
                     <p>Email: coustecarlos@gmail.com</p>
@@ -110,5 +114,8 @@
         </ul>
         <p>© CC 2024</p>
     </footer>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
