--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <section class="sect-servicios">
             <h2>Nuestros Servicios</h2>
             <div class="servicios-grid">
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 1</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 2</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 3</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 4</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 5</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 6</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 7</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 8</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 9</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicios 10</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia deportiva</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de láser.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de tracción.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de electroterapia.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia manual.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de ultrasonido.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de hidroterapia.</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia para adulto mayor</a></div>
+                <div class="servicio"><a href="./pages/servicios.html">Servicio de Fisioterapia a nivel domiciliar</a></div>
             </div>
         </section>
         <section class="sect-horarios">
