--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <section class="sect-horarios">
             <h2>Horarios de atención</h2>
             <div class="horarios-grid">
-                <div>
+                <div data-aos="fade-right">
                     <h3>Lunes a Viernes</h3>
                     <p>De 7:00 a 21:00</p>
                 </div>
-                <div>
+                <div data-aos="fade-left">
                     <h3>Sábados</h3>
                     <p>De 9:00 a 12:00</p>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.7084024284545!2d-56.16447192419404!3d-34.9137665739388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81a1abb2c099%3A0x78b4ffaecbbb41e4!2s21%20de%20Setiembre%202480%2C%2011300%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1719797564478!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div data-aos="fade-left" class="detalles">
+                <div class="detalles" data-aos="fade-left">
                     <p>Dirección: 21 de Septiembre 2480, Montevideo</p>
                     <p>Teléfono: +123456789</p>
                     <p>Email: coustecarlos@gmail.com</p>
@@ -107,12 +107,14 @@
         </div>
     </main>
     <footer>
-        <ul>
-            <li><a href="">Red Social 1</a></li>
-            <li><a href="">Red Social 2</a></li>
-            <li><a href="">Red Social 3</a></li>
-        </ul>
-        <p>© CC 2024</p>
+        <div class="redes-sociales">
+            <ul>
+                <li><a href="">Red Social 1</a></li>
+                <li><a href="">Red Social 2</a></li>
+                <li><a href="">Red Social 3</a></li>
+            </ul>
+            <p>© CC 2024</p>
+        </div>
     </footer>
     <script>
         AOS.init();
