--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="sect-quienes-somos">
             <div>
                 <h2>Quienes Somos</h2>
-                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                <p>Con más de 15 años de experiencia en el rubro, nuestro centro de fisioterapia se dedica a ofrecer tratamientos personalizados para todas las edades y disciplinas. Nos especializamos en la rehabilitación física, el alivio del dolor y la mejora de la movilidad, utilizando técnicas avanzadas y un enfoque holístico para asegurar el bienestar de nuestros pacientes. Nuestro equipo de profesionales está comprometido en brindar un servicio de calidad que promueva la recuperación y el mantenimiento de la salud física a largo plazo.</p>
                 <a href="./pages/quienes-somos.html" class="boton">Conocenos</a>
             </div>
             <img src="./img/ServicioFisio.jpg" alt="">
@@ -95,9 +95,9 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.7084024284545!2d-56.16447192419404!3d-34.9137665739388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81a1abb2c099%3A0x78b4ffaecbbb41e4!2s21%20de%20Setiembre%202480%2C%2011300%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1719797564478!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="detalles" data-aos="fade-left">
-                    <p>Dirección: 21 de Septiembre 2480, Montevideo</p>
-                    <p>Teléfono: +123456789</p>
-                    <p>Email: coustecarlos@gmail.com</p>
+                    <p><b>Dirección:</b> 21 de Septiembre 2480, Montevideo</p>
+                    <p><b>Teléfono:</b> +123456789</p>
+                    <p><b>Email:</b> coustecarlos@gmail.com</p>
                     <a href="./pages/contacto.html" class="boton">Contactar</a>
                 </div>
             </div>
@@ -106,14 +106,14 @@
             <a href="https://api.whatsapp.com/send?phone=+59899858286&text=Realizando las pruebas de consulta!" target="_blank"><img src="./img/img-wapp.png" alt="wapp"></a>            
         </div>
     </main>
-    <footer>
-        <div class="redes-sociales">
-            <ul>
-                <li><a href="">Red Social 1</a></li>
-                <li><a href="">Red Social 2</a></li>
-                <li><a href="">Red Social 3</a></li>
-            </ul>
-            <p>© CC 2024</p>
+    <footer class="footer">
+        <div class="container">
+          <ul class="social-media">
+            <li><a href="#"><img src="./img/icons8-instagram-48.png" alt=""></a></li>
+            <li><a href="#"><img src="./img/icons8-x-48.png" alt=""></a></li>
+            <li><a href="#"><img src="./img/icons8-facebook-48.png" alt=""></a></li>
+          </ul>
+          <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
         </div>
     </footer>
     <script>
