--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -84,13 +84,15 @@
             </div>
         </div>
     </main>
-    <footer>
-        <ul>
-            <li><a href="">Red Social 1</a></li>
-            <li><a href="">Red Social 2</a></li>
-            <li><a href="">Red Social 3</a></li>
-        </ul>
-        <p>© CC 2024</p>
+    <footer class="footer">
+        <div class="container">
+          <ul class="social-media">
+            <li><a href="#"><img src="../img/icons8-instagram-48.png" alt=""></a></li>
+            <li><a href="#"><img src="../img/icons8-x-48.png" alt=""></a></li>
+            <li><a href="#"><img src="../img/icons8-facebook-48.png" alt=""></a></li>
+          </ul>
+          <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
