--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,13 +66,15 @@
           <a href="https://api.whatsapp.com/send?phone=+59899858286&text=Realizando las pruebas de consulta!" target="_blank"><img src="../img/img-wapp.png" alt="wapp"></a>            
         </div>
     </main>
-    <footer>
-        <ul>
-            <li><a href="">Red Social 1</a></li>
-            <li><a href="">Red Social 2</a></li>
-            <li><a href="">Red Social 3</a></li>
+    <footer class="footer">
+      <div class="container">
+        <ul class="social-media">
+          <li><a href="#"><img src="../img/icons8-instagram-48.png" alt=""></a></li>
+          <li><a href="#"><img src="../img/icons8-x-48.png" alt=""></a></li>
+          <li><a href="#"><img src="../img/icons8-facebook-48.png" alt=""></a></li>
         </ul>
-        <p>© CC 2024</p>
-    </footer>
+        <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+      </div>
+  </footer>
 </body>
 </html>
