--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Con más de 15 años de experiencia en el rubro, nuestro centro de fisioterapia se dedica a ofrecer tratamientos personalizados para todas las edades y disciplinas. Nos especializamos en la rehabilitación física, el alivio del dolor y la mejora de la movilidad, utilizando técnicas avanzadas y un enfoque holístico para asegurar el bienestar de nuestros pacientes. Nuestro equipo de profesionales está comprometido en brindar un servicio de calidad que promueva la recuperación y el mantenimiento de la salud física a largo plazo.</p>
                 <a href="./pages/quienes-somos.html" class="boton">Conocenos</a>
             </div>
-            <img src="./img/ServicioFisio.jpg" alt="">
+            <img src="./img/fisioterapeutas.jpg" alt="">
         </section>     
         <section class="sect-servicios">
             <h2>Nuestros Servicios</h2>
