--- a/pages/agentes-fisicos.html
+++ b/pages/agentes-fisicos.html
@@ -44,7 +44,8 @@
                 <img src="../img/ServicioFisio.jpg" alt="agentes-fisicos">
                 <div>
                     <h1>Agentes fisicos</h1>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                    <p>
+                      Los agentes físicos en fisioterapia son intervenciones terapéuticas basadas en el uso controlado de diversas formas de energía, como el calor, el frío, la electricidad, la luz y las ondas sonoras. Estos agentes se emplean para tratar una amplia gama de condiciones musculoesqueléticas, con el objetivo de aliviar el dolor, reducir la inflamación, mejorar la circulación sanguínea, promover la cicatrización de tejidos y restaurar la funcionalidad física. Al ser aplicados de manera precisa y personalizada, los agentes físicos son una parte integral del plan de tratamiento en fisioterapia, complementando otras técnicas terapéuticas para optimizar la recuperación del paciente y mejorar su calidad de vida.</p>
                 </div>
             </div>
         </div>
