--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!--AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -47,7 +49,7 @@
         </section>
         <section class="sect-quienes-somos">
             <div>
-                <h2>Quienes Somos</h2>
+                <h2>Quiénes somos</h2>
                 <p>Con más de 15 años de experiencia en el rubro, nuestro centro de fisioterapia se dedica a ofrecer tratamientos personalizados para todas las edades y disciplinas. Nos especializamos en la rehabilitación física, el alivio del dolor y la mejora de la movilidad, utilizando técnicas avanzadas y un enfoque holístico para asegurar el bienestar de nuestros pacientes. Nuestro equipo de profesionales está comprometido en brindar un servicio de calidad que promueva la recuperación y el mantenimiento de la salud física a largo plazo.</p>
                 <a href="./pages/quienes-somos.html" class="boton">Conocenos</a>
             </div>
@@ -56,18 +58,18 @@
         <section class="sect-servicios">
             <h2>Nuestros Servicios</h2>
             <div class="servicios-grid">
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia deportiva</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de láser.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de tracción.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de electroterapia.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia manual.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de terapia de ultrasonido.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de hidroterapia.</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de fisioterapia para adulto mayor</a></div>
-                <div class="servicio"><a href="./pages/servicios.html">Servicio de Fisioterapia a nivel domiciliar</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-stethoscope"></i> Servicio de fisioterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-running"></i> Servicio de fisioterapia deportiva</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-lightbulb"></i> Servicio de terapia de láser</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-arrow-up"></i> Servicio de terapia de tracción</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-bolt"></i> Servicio de electroterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-hand-paper"></i> Servicio de terapia manual</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-wave-square"></i> Servicio de terapia de ultrasonido</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-water"></i> Servicio de hidroterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-user-clock"></i> Servicio de fisioterapia para adulto mayor</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-home"></i> Servicio de Fisioterapia a nivel domiciliar</a></div>
             </div>
-        </section>
+        </section>        
         <section class="sect-horarios">
             <h2>Horarios de atención</h2>
             <div class="horarios-grid">
