--- a/pages/agentes-fisicos.html
+++ b/pages/agentes-fisicos.html
@@ -41,11 +41,10 @@
         </div>
         <div class="ag-container">
             <div class="agentes-fisicos">
-                <img src="../img/ServicioFisio.jpg" alt="agentes-fisicos">
+                <img src="../img/AgentesFisicos.jpg" alt="agentes-fisicos">
                 <div>
                     <h1>Agentes fisicos</h1>
-                    <p>
-                      Los agentes físicos en fisioterapia son intervenciones terapéuticas basadas en el uso controlado de diversas formas de energía, como el calor, el frío, la electricidad, la luz y las ondas sonoras. Estos agentes se emplean para tratar una amplia gama de condiciones musculoesqueléticas, con el objetivo de aliviar el dolor, reducir la inflamación, mejorar la circulación sanguínea, promover la cicatrización de tejidos y restaurar la funcionalidad física. Al ser aplicados de manera precisa y personalizada, los agentes físicos son una parte integral del plan de tratamiento en fisioterapia, complementando otras técnicas terapéuticas para optimizar la recuperación del paciente y mejorar su calidad de vida.</p>
+                    <p>Los agentes físicos en fisioterapia son intervenciones terapéuticas basadas en el uso controlado de diversas formas de energía, como el calor, el frío, la electricidad, la luz y las ondas sonoras. Estos agentes se emplean para tratar una amplia gama de condiciones musculoesqueléticas, con el objetivo de aliviar el dolor, reducir la inflamación, mejorar la circulación sanguínea, promover la cicatrización de tejidos y restaurar la funcionalidad física. Al ser aplicados de manera precisa y personalizada, los agentes físicos son una parte integral del plan de tratamiento en fisioterapia, complementando otras técnicas terapéuticas para optimizar la recuperación del paciente y mejorar su calidad de vida.</p>
                 </div>
             </div>
         </div>
