--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                 </div>
             </div>
             <div class="contacto">
-                <p>Por reservas:</p>
+                <p><b>Por reservas:</b></p>
                 <ul>
-                    <li>+1234567890</li>
-                    <li>+0987654321</li>
+                    <li><b>+1234567890</b></li>
+                    <li><b>+0987654321</b></li>
                 </ul>
             </div>
         </section>
