--- a/pages/agentes-fisicos.html
+++ b/pages/agentes-fisicos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Proyecto Final</title>
+    <title>Fisio-360 | ¿Agentes fisicos?</title>
 </head>
 <body>
     <header>
