--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <title>Proyecto Final</title>
+    <title>Fisio-360 | Contactanos</title>
 </head>
 <body>
     <header>
