--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <footer class="footer">
         <div class="container">
           <ul class="social-media">
-            <li><a href="https://www.instagram.com/cacoc35/"><img src="./img/icons8-instagram-48.png" alt=""></a></li>
-            <li><a href="https://x.com/CacoCouste"><img src="./img/icons8-x-48.png" alt=""></a></li>
-            <li><a href="https://www.facebook.com/cacotrico"><img src="./img/icons8-facebook-48.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/cacoc35/"><img src="./img/icons8-instagram-48.png" alt="instagram"></a></li>
+            <li><a href="https://x.com/CacoCouste"><img src="./img/icons8-x-48.png" alt="x"></a></li>
+            <li><a href="https://www.facebook.com/cacotrico"><img src="./img/icons8-facebook-48.png" alt="facebook"></a></li>
           </ul>
           <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
         </div>
