--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="contacto">
                 <p><b>Por reservas:</b></p>
                 <ul>
-                    <li><b>+1234567890</b></li>
-                    <li><b>+0987654321</b></li>
+                    <li><b><i class="fas fa-fax"></i> +1234567890</b></li>
+                    <li><b><i class="fas fa-phone"></i> +0987654321</b></li>
                 </ul>
             </div>
         </section>
