--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <section class="sect-servicios">
             <h2>Nuestros Servicios</h2>
             <div class="servicios-grid">
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-stethoscope"></i> Servicio de fisioterapia</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-running"></i> Servicio de fisioterapia deportiva</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-lightbulb"></i> Servicio de terapia de láser</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-arrow-up"></i> Servicio de terapia de tracción</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-bolt"></i> Servicio de electroterapia</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-hand-paper"></i> Servicio de terapia manual</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-wave-square"></i> Servicio de terapia de ultrasonido</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-water"></i> Servicio de hidroterapia</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-user-clock"></i> Servicio de fisioterapia para adulto mayor</a></div>
-                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-home"></i> Servicio de Fisioterapia a nivel domiciliar</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-stethoscope"></i> Fisioterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-running"></i> Fisioterapia deportiva</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-lightbulb"></i> Terapia de láser</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-arrow-up"></i> Terapia de tracción</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-bolt"></i> Electroterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-hand-paper"></i> Terapia manual</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-wave-square"></i> Terapia de ultrasonido</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-water"></i> Hidroterapia</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-user-clock"></i> Fisioterapia para adulto mayor</a></div>
+                <div class="servicio"><a href="./pages/servicios.html"><i class="fas fa-home"></i> Fisioterapia a nivel domiciliar</a></div>
             </div>
         </section>        
         <section class="sect-horarios">
